# release-sheet-2.0

./: .claspignore  .gitignore  README.md  pyproject.toml
apps-script/: BackupRunbook.gs  DailyReleaseCheck.gs  JiraApprovalComment.gs  Release-data.gs  ReleaseSheetBackup.gs  RevisedReleaseReport.gs  StatusFormatting.gs  Summary.gs  constants.gs  multiCrRelease.gs  pcgEmail.gs  scheduledTriggers.gs
src/releasesheet2/: cli.py
