[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "releasesheet2"
version = "2.0.0"
description = "Release sheet tooling (2.0)"
requires-python = ">=3.9"
dependencies = [
  "openpyxl>=3.1",
]

[project.scripts]
releasesheet2 = "releasesheet2.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
